# manystore

./: .coverage  .gitignore  LICENSE  Makefile  README.md  asdfas.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.work/skills/flow-memory-bank/: activeContext.md  m021-s3-gateway-plan.md  m025-namespace-restructure-plan.md  m028-expose-arraystorage-plan.md  m035-impl-protocol-split-plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.work/skills/flow-memory-bank/interrupt/: 20260626033812-todo-convention-applied.md  20260626040000-put-returns-fileinfo.md  README.md  aaa.md
.work/skills/flow-memory-bank/interrupt/archive/: 2026-06-23-local-kv-from-filestore-and-buffer-semantics.md  2026-06-23-namespace-restructure-kv-storage.md  2026-06-23-s3-gateway-and-passthrough.md  2026-06-23-stage2-quality-resolved-and-pull-migration.md  2026-06-23-stream-interface.md  2026-06-24-aa.md  2026-06-24-aaa.md  2026-06-24-consolidate-exceptions-problem-json.md  2026-06-24-expose-arraystorage-as-contexts.md  2026-06-24-http-addressing-bucket-path-prefix-capability.md  2026-06-24-memory-clean-activecontext.md  2026-06-24-test-fast-slow-split-and-fast-skip.md  2026-06-25-conformance-docs-make.md  2026-06-25-github-pages-ci.md  2026-06-25-m010-async-file-lib.md  2026-06-25-open-safe-factories.md  2026-06-25-protocols-consolidation-and-filestorebase.md  2026-06-26-base-protocol-drift.md  2026-06-26-ipfs-and-loadbalancer.md  2026-06-26-stream-cipher.md  2026-06-26-stream-if-split-axis.md  2026-06-27-20260626033810-protocols-conformance-decision.md  2026-06-27-20260626033811-retro-metrics-mvp-first.md  2026-06-27-20260627-ci-makefile-mkdocs-standardize.md  2026-06-27-kubernetes-backend-and-sync.md  2026-06-29-m065-noncas-concurrency-runfull.md  2026-07-02-m013-metadata.md  2026-07-02-url-config-plugin-k8s.md  20260623-storage-conformance-test-suite.md
.work/skills/flow-memory-bank/outbox/: 2026-06-24-allow-make-targets-globally.md  2026-06-27-task-list-presentation-convention.md
.work/skills/flow-memory-bank/outbox/archive/: 2026-06-26-protocols-conformance-is-load-bearing.md  2026-06-26-retro-skill-info-organization.md  2026-06-26-todo-convention-and-grep-todo.md  2026-06-26-workflow-metrics-and-churn-retro.md
.work/skills/flow-memory-bank/plans/: m019-ui-plan.md  m021-s3-gateway-plan.md  m025-namespace-restructure-plan.md  m046-conditional-put-plan.md  m071-unify-store-plan.md  m078-composition-layers-plan.md
.work/skills/memory-bank/: activeContext.md  m019-ui-plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.work/skills/memory-bank/interrupt/archive/: 20260620-1200-m003-ci.md
docs/: architecture.md  backend_registry.md  conformance_spec.md  file_storage_spec.md  implementing_a_backend.md  index.md  kv_spec.md  store_config.md  url_scheme.md
examples/: manystore-ui.dev.toml  manystore-ui.toml
manystore/: README.md  __init__.py  __main__.py  array_storage.py  async_storage.py  async_to_sync_storage.py  combined.py  conformance.py  connect.py  crypto.py  exceptions.py  file.py  kv.py  protocols.py  safe_path.py  sync_storage.py
manystore/backends/: __init__.py  http_store.py  local.py  memory.py  nats.py  s3.py
manystore/client/: __init__.py  http_client.py  remote.py
manystore/conformancer/: __init__.py
manystore/gateway/: __init__.py  __main__.py  app.py  multipart.py  routes.py
manystore/implement/: __init__.py  config.py  protocol.py  s3map.py  service.py  watcher.py
manystore/server/: __main__.py  app.py  routes.py
manystore/server/static/: app.js  index.html  style.css
manystore/serving/: combined.py
manystore/serving/gateway/: __init__.py  __main__.py  app.py  multipart.py  routes.py
manystore/serving/server/: __init__.py  __main__.py  app.py  routes.py
manystore/serving/server/static/: app.js  index.html
manystore/serving/services/: __init__.py  config.py  s3map.py  service.py  watcher.py
manystore/spec/: __init__.py  base.py  exceptions.py  protocols.py
manystore/spec/conformancer/: __init__.py  __main__.py
manystore/storage/: config.py  connect.py  file.py  kv.py  registry.py  store.py  url.py
manystore/storage/backends/: __init__.py  http_store.py  ipfs.py  local.py  memory.py  nats.py  registry.py  s3.py
manystore/storage/surfaces/: array.py  loadbalancer.py  safe.py  sync_bridge.py
manystore/storage/sync/: __init__.py  mirror.py
manystore/stores/: array.py  array_storage.py  async_storage.py  base.py  safe.py  safe_path.py  sync_bridge.py
manystore/tools/conformancer/: __init__.py  __main__.py
shoudou_storage/: __init__.py  array_storage.py  async_storage.py  async_to_sync_storage.py  connect.py
shoudou_storage/backends/: local.py  nats.py
tests/: conformance_providers.py  fakes.py  test_backend_registry.py  test_conformance.py  test_conformance_matrix.py  test_crypto.py  test_e2e_backends.py  test_exceptions.py  test_storage.py  test_store_config.py  test_url_scheme.py
tests/ui/: test_client.py  test_combined.py  test_gateway.py  test_gateway_s3client.py  test_implement.py  test_s3map.py  test_server.py
tests_storage/: test_storage.py
